--- a/index.html
+++ b/index.html
@@ -45,11 +45,19 @@
     <!-- Consigna del ejercicio -->
     <div class="card pad" style="margin-bottom:12px">
       <h3>Consigna del ejercicio</h3>
-      <p>Se desea mezclar material de <b>3 canteras</b> para obtener exactamente los siguientes volúmenes de cada componente: <b>arena = 4800 m³</b>, <b>grano fino = 5810 m³</b>, <b>grano grueso = 5690 m³</b>. La composición por m³ de material de cada cantera es:</p>
+      <p><b>Enunciado:</b> Un ingeniero civil requiere <b>4800</b>, <b>5810</b>, <b>5690</b> m³ de <i>arena</i>, <i>grano fino</i> y <i>grano grueso</i> respectivamente. Determinar la cantidad de metros cúbicos que se debe transportar de material desde cada cantera para cumplir con sus requerimientos.</p>
+      <p>Resolver por:
+        <ul>
+          <li><b>INV(A) · b</b> (inversa de la matriz)</li>
+          <li><b>Jacobi</b> o <b>Gauss‑Seidel</b></li>
+          <li><b>LU</b> (con pivoteo parcial)</li>
+        </ul>
+      </p>
+      <p>Composición por m³ de material de cada cantera (porcentaje → fracción):</p>
       <pre class="mono">A = [[0.52, 0.20, 0.25],
      [0.30, 0.50, 0.20],
      [0.18, 0.30, 0.55]],   b = [4800, 5810, 5690]</pre>
-      <p>Hallar los m³ a transportar de cada cantera (<i>x₁, x₂, x₃</i>) resolviendo el sistema <b>A·x = b</b> por distintos métodos numéricos.</p>
+      <p>Hallar los m³ a transportar de cada cantera (<i>x₁, x₂, x₃</i>) resolviendo el sistema <b>A·x = b</b> por los métodos indicados. En la pestaña <b>Gráfico 3D</b> puedes visualizar los tres planos y su intersección.</p>
     </div>
 
     <div class="card pad">
